Migrations for events

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,12 @@
 # Created by https://www.toptal.com/developers/gitignore/api/django
 # Edit at https://www.toptal.com/developers/gitignore?templates=django
 
+### IDE ###
+.vscode
+.idea
+.vscode/
+.idea/
+
 ### Django ###
 *.log
 *.pot
